// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Wrapper all backgrounds props 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "large": "1440px",
        "medium": "1024px",
        "small": "768px",
        "xLarge": "2560px",
      },
      "colours": Object {
        "background": "#FFFFFF",
        "error": "#EEC8C8",
        "primary": "#5C6C78",
        "secondary": "#C8DFEE",
        "success": "#C8EED1",
        "tertiary": "#E0E0E0",
      },
      "fontSizes": Object {
        "detail": "12px",
        "h1": "42px",
        "h2": "38px",
        "h3": "32px",
        "h4": "32px",
        "h5": "28px",
        "h6": "22px",
        "tiny": "10px",
        "ui": "16px",
      },
      "fonts": Object {
        "body": "Open Sans",
        "heading": "Merriweather",
      },
      "lineHeight": Object {
        "detail": "1em",
        "h1": "1.05em",
        "h2": "1.25",
        "h3": "1.25em",
        "h4": "1.25em",
        "h5": "1.25em",
        "h6": "1.25em",
        "tiny": "0.8em",
        "ui": "1.375em",
      },
      "spacing": Object {
        "large": "24px",
        "larger": "16px",
        "medium": "12px",
        "small": "8px",
        "xLarge": "32px",
        "xSmall": "4px",
        "xxLarge": "48px",
        "xxSmall": "2px",
      },
    }
  }
>
  <React.Fragment>
    <Wrapper
      colour="background"
      constrain={true}
    >
      <styled.h1
        font="body"
        italic={false}
        lineHeight="ui"
        size="ui"
        theme={Object {}}
        weight="normal"
      >
        this has the background colour 
        <styled.span
          font="body"
          italic={false}
          lineHeight="ui"
          size="ui"
          theme={Object {}}
          weight="bold"
        >
          background
        </styled.span>
      </styled.h1>
    </Wrapper>
    <Wrapper
      colour="primary"
      constrain={true}
    >
      <styled.h1
        font="body"
        italic={false}
        lineHeight="ui"
        size="ui"
        theme={Object {}}
        weight="normal"
      >
        this has the background colour 
        <styled.span
          font="body"
          italic={false}
          lineHeight="ui"
          size="ui"
          theme={Object {}}
          weight="bold"
        >
          primary
        </styled.span>
      </styled.h1>
    </Wrapper>
    <Wrapper
      colour="secondary"
      constrain={true}
    >
      <styled.h1
        font="body"
        italic={false}
        lineHeight="ui"
        size="ui"
        theme={Object {}}
        weight="normal"
      >
        this has the background colour 
        <styled.span
          font="body"
          italic={false}
          lineHeight="ui"
          size="ui"
          theme={Object {}}
          weight="bold"
        >
          secondary
        </styled.span>
      </styled.h1>
    </Wrapper>
    <Wrapper
      colour="tertiary"
      constrain={true}
    >
      <styled.h1
        font="body"
        italic={false}
        lineHeight="ui"
        size="ui"
        theme={Object {}}
        weight="normal"
      >
        this has the background colour 
        <styled.span
          font="body"
          italic={false}
          lineHeight="ui"
          size="ui"
          theme={Object {}}
          weight="bold"
        >
          tertiary
        </styled.span>
      </styled.h1>
    </Wrapper>
    <Wrapper
      colour="success"
      constrain={true}
    >
      <styled.h1
        font="body"
        italic={false}
        lineHeight="ui"
        size="ui"
        theme={Object {}}
        weight="normal"
      >
        this has the background colour 
        <styled.span
          font="body"
          italic={false}
          lineHeight="ui"
          size="ui"
          theme={Object {}}
          weight="bold"
        >
          success
        </styled.span>
      </styled.h1>
    </Wrapper>
    <Wrapper
      colour="error"
      constrain={true}
    >
      <styled.h1
        font="body"
        italic={false}
        lineHeight="ui"
        size="ui"
        theme={Object {}}
        weight="normal"
      >
        this has the background colour 
        <styled.span
          font="body"
          italic={false}
          lineHeight="ui"
          size="ui"
          theme={Object {}}
          weight="bold"
        >
          error
        </styled.span>
      </styled.h1>
    </Wrapper>
  </React.Fragment>
</ThemeProvider>
`;

exports[`Storyshots Wrapper all props 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "large": "1440px",
        "medium": "1024px",
        "small": "768px",
        "xLarge": "2560px",
      },
      "colours": Object {
        "background": "#FFFFFF",
        "error": "#EEC8C8",
        "primary": "#5C6C78",
        "secondary": "#C8DFEE",
        "success": "#C8EED1",
        "tertiary": "#E0E0E0",
      },
      "fontSizes": Object {
        "detail": "12px",
        "h1": "42px",
        "h2": "38px",
        "h3": "32px",
        "h4": "32px",
        "h5": "28px",
        "h6": "22px",
        "tiny": "10px",
        "ui": "16px",
      },
      "fonts": Object {
        "body": "Open Sans",
        "heading": "Merriweather",
      },
      "lineHeight": Object {
        "detail": "1em",
        "h1": "1.05em",
        "h2": "1.25",
        "h3": "1.25em",
        "h4": "1.25em",
        "h5": "1.25em",
        "h6": "1.25em",
        "tiny": "0.8em",
        "ui": "1.375em",
      },
      "spacing": Object {
        "large": "24px",
        "larger": "16px",
        "medium": "12px",
        "small": "8px",
        "xLarge": "32px",
        "xSmall": "4px",
        "xxLarge": "48px",
        "xxSmall": "2px",
      },
    }
  }
>
  <Wrapper
    colour="background"
    constrain={false}
  >
    <styled.span
      font="body"
      italic={false}
      lineHeight="ui"
      size="ui"
      theme={Object {}}
      weight="bold"
    >
      Some content to wrap
    </styled.span>
  </Wrapper>
</ThemeProvider>
`;

exports[`Storyshots Wrapper default props 1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "large": "1440px",
        "medium": "1024px",
        "small": "768px",
        "xLarge": "2560px",
      },
      "colours": Object {
        "background": "#FFFFFF",
        "error": "#EEC8C8",
        "primary": "#5C6C78",
        "secondary": "#C8DFEE",
        "success": "#C8EED1",
        "tertiary": "#E0E0E0",
      },
      "fontSizes": Object {
        "detail": "12px",
        "h1": "42px",
        "h2": "38px",
        "h3": "32px",
        "h4": "32px",
        "h5": "28px",
        "h6": "22px",
        "tiny": "10px",
        "ui": "16px",
      },
      "fonts": Object {
        "body": "Open Sans",
        "heading": "Merriweather",
      },
      "lineHeight": Object {
        "detail": "1em",
        "h1": "1.05em",
        "h2": "1.25",
        "h3": "1.25em",
        "h4": "1.25em",
        "h5": "1.25em",
        "h6": "1.25em",
        "tiny": "0.8em",
        "ui": "1.375em",
      },
      "spacing": Object {
        "large": "24px",
        "larger": "16px",
        "medium": "12px",
        "small": "8px",
        "xLarge": "32px",
        "xSmall": "4px",
        "xxLarge": "48px",
        "xxSmall": "2px",
      },
    }
  }
>
  <Wrapper
    colour="background"
    constrain={true}
  >
    <styled.h1
      font="body"
      italic={false}
      lineHeight="ui"
      size="ui"
      theme={Object {}}
      weight="normal"
    >
      This will be wrapped at 1024px
    </styled.h1>
  </Wrapper>
</ThemeProvider>
`;
